--- a/udacity_proj_pkg/config/controller_params.yaml
+++ b/udacity_proj_pkg/config/controller_params.yaml
@@ -1,6 +1,6 @@
-Q_matrix_diag : "50,50,150"
-R_matrix_diag : "30,90"
+Q_matrix_diag : "70.0, 70.0 ,150.0"
+R_matrix_diag : "30.0, 120.0"
 state_dimension_length : "3"
 input_dimension_length : "2"
-sampling_period : "0.5"
+sampling_period : "2"
 time_window : "30"
