--- a/udacity_proj_pkg/config/controller_params.yaml
+++ b/udacity_proj_pkg/config/controller_params.yaml
@@ -1,7 +1,8 @@
-recorded_path_file : "/home/workspace/catkin_ws/src/udacity_proj/udacity_proj_pkg/path/test_path1.txt"
-Q_matrix_diag : "160.0, 160.0 ,200.0"
+recorded_path_file : "/home/workspace/catkin_ws/src/udacity_proj/udacity_proj_pkg/path/ramp_path.txt"
+Q_matrix_diag : "700.0, 700.0 ,900.0"
 R_matrix_diag : "3000.0, 3000.0"
 state_dimension_length : "3"
 input_dimension_length : "2"
-sampling_period : "3"
-time_window : "15"
+sampling_period : "1.5"
+time_window : "25"
+gain_compensation: "1.01"
